add feature of remove row fixed #5

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <button onclick="addRow()"> add row </button>
-    <button onclick="addCol()"> add col </button>
+    <button onclick="addCol()"> add row </button>
+    <button onclick="removeRow()"> remove Row </button>
     <div class="grid-container">
 
         <div class="col">
