add feature of remove col fixed #6

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
-    <button onclick="addRow()"> add row </button>
-    <button onclick="addCol()"> add row </button>
-    <button onclick="removeRow()"> remove Row </button>
+    <button onclick="addRow()"> Add row </button>
+    <button onclick="addCol()"> Add Col </button>
+    <button onclick="removeRow()"> Remove Row </button>
+    <button onclick="removeCol()"> Remove col </button>
     <div class="grid-container">
 
         <div class="col">
