--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
     <button onclick="addCol()"> Add Col </button>
     <button onclick="removeRow()"> Remove Row </button>
     <button onclick="removeCol()"> Remove col </button>
+    <button onclick="fillUncoloredCells()"> fill  </button>
+    <div class="selectorColor">
+        <div>
+            <label for="color">Select a Color for Squares</label>
+            <select name="color" id="colorSelector">
+          <option value="white">white</option>
+          <option value="red">Red</option>
+          <option value="orange">Orange</option>
+          <option value="yellow">Yellow</option>
+        
+        </select>
+        </div>
+    </div>
     <div class="grid-container">
 
         <div class="col">
-            <div class="row"></div>
+            <div class="row" id="0"></div>
 
         </div>
 
