create a function that unfill the colors of the elements fixed #8

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <button onclick="addCol()"> Add Col </button>
     <button onclick="removeRow()"> Remove Row </button>
     <button onclick="removeCol()"> Remove col </button>
-    <button onclick="fillUncoloredCells()"> fill  </button>
+    <button onclick="fillUncoloredCells()"> fill with color  </button>
+    <button onclick="UnfillcoloredCells()"> unfill  </button>
     <div class="selectorColor">
         <div>
             <label for="color">Select a Color for Squares</label>
