clear all Cells to original state

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <button onclick="removeCol()"> Remove col </button>
     <button onclick="fillCellWillSelectedColor()"> fill with color  </button>
     <button onclick="UnfillcoloredCells()"> unfill Color </button>
+    <button onclick="UnfillcoloredCells()"> unfill Color </button>
+    <button onclick="clearAllCells()"> clear All Cells </button>
     <div class="selectorColor">
         <div>
             <label for="color">Select a Color for Squares</label>
