fix UnfillcoloredCells() it uncolor everything (all cells) fixed #10

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="removeCol()"> Remove col </button>
     <button onclick="fillCellWillSelectedColor()"> fill with color  </button>
     <button onclick="UnfillcoloredCells()"> unfill Color </button>
-    <button onclick="UnfillcoloredCells()"> unfill Color </button>
+    <!-- <button onclick="UnfillcoloredCells()"> unfill Color </button> -->
     <button onclick="clearAllCells()"> clear All Cells </button>
     <div class="selectorColor">
         <div>
