fix fillCellWithSelectedColor() after change the name and do it in two loops it color everything (all cells) fixed #11

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button onclick="addCol()"> Add Col </button>
     <button onclick="removeRow()"> Remove Row </button>
     <button onclick="removeCol()"> Remove col </button>
-    <button onclick="fillCellWillSelectedColor()"> fill with color  </button>
+    <button onclick="fillCellWithSelectedColor()"> fill with select color  </button>
     <button onclick="UnfillcoloredCells()"> unfill Color </button>
     <!-- <button onclick="UnfillcoloredCells()"> unfill Color </button> -->
     <button onclick="clearAllCells()"> clear All Cells </button>
